# rcu_build_env

./: .gitignore  guid_build.md
build_system_1/: CMakeLists.txt  README.md  toolchain.cmake
build_system_1/app/: app_main.c
build_system_1/platform/stm32g0b0/: stm32g0b0.ioc
build_system_1/platform/stm32g0b0/Src/: main.c
build_system_1/tests/: test_main.c
build_system_2/: ARCHITECTURE_CONTRACT.md  CMakeLists.txt  guid_build.md
build_system_2/app/: app_main.c
build_system_2/docs/: structure.md
build_system_2/platform/mcu/stm32g0b0/: .mxproject  CMakeLists.txt  STM32G0B0XX_FLASH.ld  stm32g0b0.ioc
build_system_2/platform/mcu/stm32g0b0/Src/: main.c
build_system_2/platform/mcu/stm32g0b0/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
build_system_2/platform/stm32_g0b0/: .mxproject  CMakeLists.txt  stm32_g0b0.ioc
build_system_2/platform/stm32_g0b0/Inc/: main.h
build_system_2/platform/stm32_g0b0/Src/: gpio.c  main.c
build_system_2/platform/stm32_g0b0/cmake/stm32cubemx/: CMakeLists.txt
